# PageIndex

./: .gitignore  .mcp.json  CHANGELOG_GUI.md  README.md  pyproject.toml  requirements.txt  run_claude_guide.ps1  run_pageindex.py  run_pageindex_gui.py  test_api.py  test_toc.py
.claude/: settings.json
.claude/agents/moai/: manager-ddd.md
.moai/: manifest.json
.moai/config/sections/: project.yaml  quality.yaml  system.yaml
.moai/specs/SPEC-GUI-001/: acceptance.md  plan.md  spec.md
.omc/sessions/: 44c7bef3-d162-465d-94b8-fdcf6e73dc8e.json  4bad1e88-49b8-4f7a-8f8f-93eb2b293546.json  4f356e60-eb45-4d48-8301-f8d1d1d9674a.json  7de71853-aa8d-4d37-81e8-4a10809cf403.json  8a00a5d2-c0af-428a-93eb-f007417d4efb.json  b63ed270-c4ca-41f2-b90e-e8ea095c56e6.json  eb06cb81-7819-4500-8772-2b2bab316f2e.json
cookbook/: pageindex_RAG_simple.ipynb  vision_RAG_pageindex.ipynb
daily/: 2025-02-07-daily-log.md
pageindex/: __init__.py  config.yaml  constants.py  models.py  page_index.py  page_index_md.py  utils.py
pageindex/gui/: JSON_VIEWER_README.md  __init__.py  json_viewer.py  main.py  main_window.py
pageindex/gui/processing/: __init__.py  processor.py
results/: 2309.06275v4_structure.json
tests/: __init__.py  test_json_viewer.py
tests/characterization/: cli_config_characterization.json  test_cli_characterization.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_models.py  test_utils.py
